--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,20 @@
 <resources>
-    <string name="app_name">Diploma</string>
+    <string name="app_name">Забота</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Константин</string>
+    <string name="nav_header_subtitle">kabanov_kostya@mail.ru</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Настройки</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Главная</string>
+    <string name="menu_returnability">Поток клиентов</string>
+    <string name="DynamicsCustomerRepayment">Динамика возвратности клиентов, %</string>
+    <string name="OperationalRecords">Оперативные записи, %</string>
+    <string name="FlowCustomersPerYear">Поток клиентов за год</string>
+    <string name="NameCompany">TOPGUN</string>
+    <string name="Address">Адрес: Проспект Медиков, 10–1</string>
+    <string name="CountEmployee">Сотрудников: 5</string>
+    <string name="Adviсe">Реомендации</string>
+    <string name="NoRecommendationsYet">Рекомендаций пока нет</string>
 </resources>
